[TF] Disable `-enable-large-loadable-types` by default. (#22334)

* [TF] Disable `-enable-large-loadable-types` by default.

The `LoadableByAddress` pass lowers loadable SIL types.
It is problematic for differentiation because it does not handle functions that
return closures that take/return large loadable types (e.g. JVPs/VJPs).

Critical hot-fix for TF-11 (and SR-9849), unblocking differentiation.
A few different fixes were considered; this was the simplest.

Enable machine learning API differentiation tests.

* Disable `test/TensorFlowRuntime/model_autodiff_runtime.swift` for `-O`.

`XORTraining` test segfaults, possibly due to AD refcounting bug.